--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,6 +1,4 @@
-@use '../shared/styles/variables' as *;
-
 .title {
-	color: $color-primary;
-	font-size: 2.5rem;
+  color: #0070f3;
+  font-size: 2.5rem;
 }
