--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -14,6 +14,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
@@ -22,6 +23,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+header {
+  flex: none;
+}
+main {
+  flex: auto;
+}
+footer {
+  flex: none;
 }
 
 * {
@@ -33,6 +48,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.container {
+  padding: 0 10%;
 }
 
 @media (prefers-color-scheme: dark) {
