--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -54,6 +54,12 @@ a {
   padding: 0 10%;
 }
 
+.section-title {
+  font-size: 36px;
+  line-height: 100%;
+  font-weight: 400;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
