add fancybox, add modals, open images, add thumbSwiper, modify Button, add react icons, stylesheets for blocks (hero, actions, models)

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -1,6 +1,15 @@
 /* colors */
-$color-primary: #48a29f;
-$color-bg: #FAFAFA;
+$color-light: #fff;
+$color-transparent-light: #FFFFFF80;
+$color-dark: #000;
+$color-bg: #1E1E1E;
+$color-primary: #E73843;
+$color-secondary: #82c2c4;
+$color-dark-gray: #222222;
+$color-gray: #959393;
+$color-light-gray: #E1E1E1;
+$color-more-light-gray: #FAFAFA;
+$color-transparent-light-gray: #3F3F3F80;
 
 
 $breakpoint-mobile: 768px;
