--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -20,13 +20,16 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-alibaba-sans), sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+body.modal-open {
+  overflow: hidden;
 }
 
 header {
@@ -59,6 +62,7 @@ a {
   line-height: 100%;
   font-weight: 400;
 }
+
 
 @media (prefers-color-scheme: dark) {
   html {
