--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -1,5 +1,10 @@
 @use '../../../shared/styles/variables' as *;
 
+.loading {
+	text-align: center;
+	padding: 40px 0;
+}
+
 .title {
 	padding-bottom: 40px;
 }
@@ -23,23 +28,58 @@
 			margin-bottom: 20px;
 		}
 
-		.imgWrap {
-			width: 50%;
 
-			.swiper {
-				height: 100%;
+		.imgWrap {
+			position: relative;
+			width: 50%;
+			display: flex;
+			gap: 20px;
+		}
+
+		.mainSwiper {
+			width: 100%;
+			height: 100%;
+			flex: auto;
+
+			.swiperSlide {
+				aspect-ratio: 4 / 3;
+
+				.image {
+					object-fit: cover;
+				}
 			}
 
-			.image {
-				width: 100%;
-				height: auto;
+
+		}
+
+		.thumbSwiper {
+			width: 64px;
+			flex: none;
+			height: 80%;
+			margin: auto;
+
+			.thumbSlide {
+				cursor: pointer;
+				transition: opacity 0.3s ease;
+
+				&:hover {
+
+				}
+
+				&.swiper-slide-thumb-active {
+					opacity: 1;
+				}
+			}
+
+			.thumbImage {
+				object-fit: cover;
 			}
 		}
 
 		.infoWrap {
 			flex: auto;
 			padding: 20px;
-			border: 1px solid $color-primary;
+			border: 1px solid $color-light-gray;
 		}
 
 	}
