--- a/src/widgets/hero/ui/Hero.module.scss
+++ b/src/widgets/hero/ui/Hero.module.scss
@@ -1,7 +1,6 @@
 @import "../../../shared/styles/variables";
 
 .hero {
-	background-color: lightgoldenrodyellow;
 	overflow: hidden;
 	position: relative;
 
@@ -17,17 +16,37 @@
 		inset: 0;
 		padding-top: 160px;
 
+		.subtitle {
+			position: relative;
+			display: inline-block;
+			padding: 12px 24px;
+			border-radius: 12px;
+			background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
+			backdrop-filter: blur(18px);
+			-webkit-backdrop-filter: blur(18px);
+			color: white;
+			font-size: 20px;
+			letter-spacing: 0.5px;
+			text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			margin-bottom: 16px;
+
+			> span {
+				font-weight: 700;
+			}
+		}
+
 		.title {
 			color: $color-light;
 			font-size: 58px;
-			font-weight: 500;
-			line-height: 110%;
+			font-weight: 700;
+			line-height: 90%;
 			padding-bottom: 20px;
+			text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 
 			> span {
 				color: $color-primary;
 				font-size: 40px;
-				font-weight: 700;
 			}
 		}
 	}
