--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -18,6 +18,7 @@
 
 	}
 	.card {
+		position: relative;
 		height: fit-content;
 		display: flex;
 		gap: 20px;
@@ -37,16 +38,26 @@
 		}
 
 		.mainSwiper {
+			position: relative;
 			width: 100%;
 			height: 100%;
 			flex: auto;
 
 			.swiperSlide {
+				position: relative;
 				aspect-ratio: 4 / 3;
 
-				.image {
-					object-fit: cover;
+				.imageContainer {
+					position: relative;
+					width: 100%;
+					height: 100%;
+
+					.image {
+						object-fit: cover;
+					}
 				}
+
+
 			}
 
 
