--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -13,3 +13,5 @@ $color-transparent-light-gray: #3F3F3F80;
 
 
 $breakpoint-mobile: 768px;
+$breakpoint-tablet: 1024px;
+$breakpoint-laptop: 1800px;
