--- a/src/widgets/social/ui/Social.module.scss
+++ b/src/widgets/social/ui/Social.module.scss
@@ -1,6 +1,7 @@
 @import "../../../shared/styles/variables";
 
-.footer {
-	background-color: $color-bg;
+.social {
+	background-color: $color-primary;
 	color: $color-light;
+	padding: 40px 100px;
 }
