--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -1,112 +1,182 @@
 @use '../../../shared/styles/variables' as *;
+@use '../../../shared/styles/mixins' as *;
 
 .loading {
 	text-align: center;
 	padding: 40px 0;
 }
 
-.title {
-	padding-bottom: 40px;
-}
-
 .models {
 	padding-top: 120px;
 	padding-bottom: 120px;
 
+	.title {
+		padding-bottom: 40px;
+	}
 
 	.cardWrap {
 
-	}
-	.card {
-		position: relative;
-		height: fit-content;
-		display: flex;
-		gap: 20px;
-		max-height: 385px;
-		overflow: hidden;
-
-		&:not(:last-child) {
-			margin-bottom: 20px;
-		}
-
-
-		.imgWrap {
+		.card {
 			position: relative;
-			width: 60%;
+			height: fit-content;
 			display: flex;
 			gap: 20px;
-		}
+			max-height: 385px;
+			overflow: hidden;
 
-		.mainSwiper {
-			position: relative;
-			width: 100%;
-			height: 100%;
-			flex: auto;
+			@include tablet {
+				flex-direction: column;
+				max-height: fit-content;
+			}
 
-			.swiperSlide {
+			&:not(:last-child) {
+				margin-bottom: 20px;
+			}
+
+
+			.imgWrap {
 				position: relative;
-				aspect-ratio: 4 / 3;
+				width: 60%;
+				display: flex;
+				gap: 20px;
 
-				.imageContainer {
-					position: relative;
+				@include tablet {
 					width: 100%;
-					height: 100%;
+					flex-direction: column-reverse;
+					gap: 10px;
+				}
+			}
 
-					.image {
-						object-fit: cover;
+			.mainSwiper {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				flex: auto;
+
+				.swiperSlide {
+					position: relative;
+					aspect-ratio: 4 / 3;
+
+					@include tablet {
+						aspect-ratio: 16 / 9;
+					}
+
+					.imageContainer {
+						position: relative;
+						width: 100%;
+						height: 100%;
+
+						.image {
+							object-fit: cover;
+						}
+					}
+
+
+				}
+
+				// переопределение стилей для стрелок
+				:global(.swiper-button-prev),
+				:global(.swiper-button-next) {
+					width: 22px;
+					height: 22px;
+					background: $color-light;
+					border-radius: 50%;
+					top: auto;
+					bottom: 10px;
+					transform: translateY(0);
+					margin-top: 0;
+					box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+
+					> svg {
+						height: 10px;
+
+						> path {
+							fill: $color-primary;
+						}
 					}
 				}
 
-
-			}
-
-
-		}
-
-		.thumbSwiper {
-			width: 64px;
-			flex: none;
-			height: 80%;
-			margin: auto;
-
-			.thumbSlide {
-				cursor: pointer;
-				transition: opacity 0.3s ease;
-
-				&:hover {
-
+				:global(.swiper-button-prev) {
+					left: 50%;
+					transform: translateX(-25px);
 				}
 
-				&.swiper-slide-thumb-active {
-					opacity: 1;
+				:global(.swiper-button-next) {
+					right: 50%;
+					transform: translateX(25px);
+				}
+
+				:global(.swiper-button-disabled) {
+					opacity: 0.5;
+				}
+
+
+			}
+
+			.thumbSwiper {
+				width: 64px;
+				flex: none;
+				height: 80%;
+				margin: auto;
+
+				@include tablet {
+					height: 40px;
+					width: 100%;
+				}
+
+				.thumbSlide {
+					cursor: pointer;
+					transition: opacity 0.3s ease;
+
+					&:hover {
+
+					}
+
+					&.swiper-slide-thumb-active {
+						opacity: 1;
+					}
+				}
+
+				.thumbImage {
+					object-fit: cover;
 				}
 			}
 
-			.thumbImage {
-				object-fit: cover;
-			}
-		}
+			.infoWrap {
+				flex: auto;
+				padding: 20px;
+				border: 1px solid $color-light-gray;
 
-		.infoWrap {
-			flex: auto;
-			padding: 20px;
-			border: 1px solid $color-light-gray;
+				@include tablet {
+					padding: 0;
+					border: none;
+				}
 
-			.btnWrap {
-				display: flex;
-				gap: 6px;
+				.btnWrap {
+					display: flex;
+					gap: 6px;
 
-				> button {
-					flex: 1;
+					@include tablet {
+						flex-direction: column;
+					}
+
+					> button {
+						flex: 1;
+
+						@include tablet {
+							flex: auto;
+						}
+					}
 				}
 			}
-		}
 
+		}
 	}
+
 }
 
 
-
+// переключение цвета
 .colorSelector {
 	display: flex;
 	gap: 4px;
