--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -6,6 +6,10 @@
 	padding: 40px 0;
 }
 
+.error {
+
+}
+
 .models {
 	padding-top: 120px;
 	padding-bottom: 120px;
@@ -146,10 +150,42 @@
 				flex: auto;
 				padding: 20px;
 				border: 1px solid $color-light-gray;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				gap: 16px;
 
 				@include tablet {
 					padding: 0;
 					border: none;
+				}
+
+				.modelTitle {
+					margin: 0;
+					font-size: 32px;
+					font-weight: 400;
+					line-height: 100%;
+				}
+
+				.prices {
+					display: flex;
+					align-items: center;
+					gap: 12px;
+
+					.price {
+						color: $color-primary;
+						font-size: 32px;
+						font-weight: 400;
+						line-height: 100%;
+						margin-bottom: 10px;
+					}
+
+					.oldPrice {
+						color: $color-gray;
+						text-decoration: line-through;
+						font-size: 14px;font-weight: 400;
+						line-height: 100%;
+					}
 				}
 
 				.btnWrap {
@@ -180,7 +216,6 @@
 .colorSelector {
 	display: flex;
 	gap: 4px;
-	margin-bottom: 16px;
 
 
 	.colorButton {
