--- a/src/widgets/equipments/ui/Equipments.module.scss
+++ b/src/widgets/equipments/ui/Equipments.module.scss
@@ -19,6 +19,11 @@
 		justify-content: space-between;
 		align-items: center;
 		margin-bottom: 40px;
+		gap: 20px;
+
+		@include mobile {
+			flex-direction: column;
+		}
 
 		.title {
 
@@ -34,25 +39,116 @@
 			background-color: $color-more-light-gray;
 			padding: 10px 16%;
 
+			@include mobile {
+				display: flex;
+				flex-direction: column-reverse;
+				padding: 10px 4%;
+			}
+
+			animation: fadeInUp 0.5s ease forwards;
+			opacity: 0;
+
+			// Последовательное появление карточек
+			@for $i from 1 through 10 {
+				&:nth-child(#{$i}) {
+					animation-delay: #{$i * 0.1}s;
+				}
+			}
+
 			&:not(:last-child) {
 				margin-bottom: 20px;
 			}
 
 			.infoWrap {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				height: 100%;
 
+				.name {
+					flex: none;
+				}
+
+				.chars {
+					flex: auto;
+				}
+
+				.btnWrap {
+					flex: none;
+					display: flex;
+					gap: 6px;
+
+					@include tablet {
+						flex-direction: column;
+					}
+
+					> button {
+						flex: 1;
+
+						@include tablet {
+							flex: auto;
+						}
+					}
+				}
 			}
 
 			.imageContainer {
 				position: relative;
 				min-height: 270px;
+				width: 100%;
+
+				@include mobile {
+					min-height: 160px;
+					overflow: hidden;
+				}
 
 				.image {
-					width: 100%;
-					height: auto;
 					object-fit: contain;
 				}
 			}
 		}
 	}
+}
+
+@keyframes fadeInUp {
+	from {
+		opacity: 0;
+		transform: translateY(20px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+.filters {
+	display: flex;
+	gap: 10px;
+
+	@include mobile {
+		flex-direction: column;
+		width: 100%;
+	}
+
+	.select {
+		width: 240px;
+
+		@include mobile {
+			width: 100%;
+		}
+	}
+}
+
+.showMoreWrap {
+	padding-top: 40px;
+
+	> button {
+		margin: auto;
+	}
+}
+
+.selectWrapper {
+	width: 100%;
+	margin-bottom: 16px;
 }
 
