--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -1,16 +1,16 @@
 /* colors */
 $color-light: #fff;
-$color-transparent-light: #FFFFFF80;
+$color-transparent-light: #ffffff80;
 $color-dark: #000;
-$color-bg: #1E1E1E;
-$color-primary: #E73843;
+$color-bg: #1e1e1e;
+$color-primary: #e73843;
 $color-secondary: #82c2c4;
 $color-dark-gray: #222222;
 $color-gray: #959393;
-$color-light-gray: #E1E1E1;
-$color-more-light-gray: #FAFAFA;
-$color-transparent-light-gray: #3F3F3F80;
-
+$color-light-gray: #e1e1e1;
+$color-more-light-gray: #fafafa;
+$color-transparent-light-gray: #3f3f3f80;
+$transition-0-3s: all 0.3s ease;
 
 $breakpoint-mobile: 768px;
 $breakpoint-tablet: 1024px;
