--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,66 +1,92 @@
-@use '../shared/styles/variables' as *;
-@use '../shared/styles/mixins' as *;
+@use "../shared/styles/variables" as *;
+@use "../shared/styles/mixins" as *;
 
+html {
+    scroll-behavior: smooth;
+}
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  height: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
-  font-family: var(--font-alibaba-sans), sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: var(--font-alibaba-sans), sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 body.modal-open {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 header {
-  flex: none;
+    flex: none;
 }
 main {
-  flex: auto;
+    flex: auto;
 }
 footer {
-  flex: none;
+    flex: none;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 .container {
-  padding: 0 16%;
+    padding: 0 16%;
 
-  @include laptop {
-    padding: 0 4%;
-  }
+    @include laptop {
+        padding: 0 4%;
+    }
 
-  @include tablet {
-    padding: 0 4%;
-  }
+    @include tablet {
+        padding: 0 4%;
+    }
 
-  @include mobile {
-    padding: 0 10px;
-  }
+    @include mobile {
+        padding: 0 10px;
+    }
 }
 
 .section-title {
-  font-size: 36px;
-  line-height: 100%;
-  font-weight: 400;
+    font-size: 36px;
+    line-height: 100%;
+    font-weight: 400;
+}
+
+.mob-hide {
+    @include mobile {
+        display: none !important;
+    }
+}
+
+.desk-hide {
+    @include desktop {
+        display: none !important;
+    }
+}
+
+.laptop-hide {
+    @include laptop {
+        display: none !important;
+    }
+}
+
+.tablet-hide {
+    @include tablet {
+        display: none !important;
+    }
 }
