--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -42,6 +42,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+input:focus-visible, input:focus {
+  outline: none;
+}
 
 .container {
   padding: 0 16%;
@@ -63,4 +66,20 @@ a {
   font-size: 36px;
   line-height: 100%;
   font-weight: 400;
+
+  @include mobile {
+    font-size: 24px;
+  }
+}
+
+.inst {
+  position: relative;
+  display: inline-block;
+
+  &::after {
+    content: '*';
+    position: absolute;
+    top: -4px;
+    left: 100%;
+  }
 }
