--- a/src/widgets/hero/ui/Hero.module.scss
+++ b/src/widgets/hero/ui/Hero.module.scss
@@ -1,4 +1,5 @@
-@import "../../../shared/styles/variables";
+@use '../../../shared/styles/variables' as *;
+@use '../../../shared/styles/mixins' as *;
 
 .hero {
 	overflow: hidden;
@@ -18,6 +19,10 @@
 		inset: 0;
 		padding-top: 160px;
 
+		@include mobile {
+			padding-top: 90px;
+		}
+
 		.subtitle {
 			position: relative;
 			display: inline-block;
@@ -33,6 +38,10 @@
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 			margin-bottom: 16px;
 
+			@include mobile {
+				font-size: 16px;
+			}
+
 			> span {
 				font-weight: 700;
 			}
@@ -46,12 +55,47 @@
 			padding-bottom: 20px;
 			text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 
+			@include mobile {
+				font-size: 30px;
+				line-height: 110%;
+			}
+
 			> span {
 				color: $color-primary;
 				font-size: 40px;
+
+				@include mobile {
+					font-size: 30px;
+				}
+			}
+		}
+
+		@include mobile {
+			.buttonWrap {
+				width: fit-content;
 			}
 		}
 	}
 
+	// пагинация
+	:global(.swiper-pagination-bullet) {
+		width: 12px;
+		height: 12px;
+		background: transparent;
+		opacity: 1;
+		border: 1px solid $color-light;
 
+		&:global(.swiper-pagination-bullet-active) {
+			background: $color-light;
+		}
+	}
+
+	:global(.swiper-pagination) {
+		bottom: 30px !important;
+
+		@media (max-width: 768px) {
+			bottom: 20px !important;
+		}
+	}
 }
+
