--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -14,6 +14,11 @@
 	padding-top: 120px;
 	padding-bottom: 120px;
 
+	@include mobile {
+		padding-top: 60px;
+		padding-bottom: 60px;
+	}
+
 	.title {
 		padding-bottom: 40px;
 	}
@@ -206,6 +211,14 @@
 				}
 			}
 
+		}
+	}
+
+	.showMoreWrap {
+		padding-top: 40px;
+
+		> button {
+			margin: auto;
 		}
 	}
 
