блок соцсетей, для моделей навигация, добавлены экраны в useDevice

--- a/src/widgets/trade/ui/Trade.module.scss
+++ b/src/widgets/trade/ui/Trade.module.scss
@@ -106,6 +106,7 @@
 			border: 0;
 			text-transform: uppercase;
 			height: 43px;
+			background-color: $color-light;
 
 			@include mobile {
 				width: 100%;
