--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -77,6 +77,7 @@ input:focus-visible, input:focus {
 .inst {
   position: relative;
   display: inline-block;
+    width: fit-content;
 
   &::after {
     content: '*';
