--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -270,4 +270,70 @@
 	}
 }
 
+.navWrap {
+	width: 100%;
+	position: relative;
+	margin-bottom: 40px;
+
+	.navImage {
+		object-fit: cover;
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+	}
+
+	.navInfo {
+		font-weight: 700;
+	}
+
+	.swiperContainer {
+		width: 100%;
+		padding: 10px 0;
+	}
+
+	.swiperSlide {
+		width: auto;
+
+
+		@include desktop {
+			flex: 1;
+			min-width: 0;
+		}
+
+		@include mobile {
+			max-width: 100px;
+		}
+	}
+
+	.navItem {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-decoration: none;
+		color: inherit;
+		height: 100%;
+		border: 1px solid $color-light-gray;
+
+		@include mobile {
+			min-width: 120px;
+		}
+	}
+
+	.imageContainer {
+		position: relative;
+		width: 80px;
+		height: 80px;
+		margin-bottom: 8px;
+
+		@include mobile {
+			width: 60px;
+			height: 60px;
+		}
+	}
+}
+
+
+
+
+
 
