контекст для моделей, константа для ссылок на соцсети, блок соцсети, изменила скролл и паддинги, блок для моделей и скролл до нужно модели. В футере тоже модели вывожу модели

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,6 +3,11 @@
 
 html {
     scroll-behavior: smooth;
+    scroll-padding-top: 84px;
+
+    @include mobile{
+        scroll-padding-top: 70px;
+    }
 }
 
 html,
