--- a/src/widgets/equipments/ui/Equipments.module.scss
+++ b/src/widgets/equipments/ui/Equipments.module.scss
@@ -11,11 +11,11 @@
 }
 
 .equipments {
-	padding-top: 120px;
+	margin-top: 120px;
 	padding-bottom: 120px;
 
 	@include mobile {
-		padding-top: 60px;
+		margin-top: 60px;
 		padding-bottom: 60px;
 	}
 
