--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -11,11 +11,11 @@
 }
 
 .models {
-	padding-top: 120px;
+	margin-top: 120px;
 	padding-bottom: 120px;
 
 	@include mobile {
-		padding-top: 60px;
+		margin-top: 60px;
 		padding-bottom: 60px;
 	}
 
@@ -276,7 +276,7 @@
 	margin-bottom: 40px;
 
 	.navImage {
-		object-fit: cover;
+		object-fit: contain;
 		width: 100%;
 		height: 100%;
 		z-index: -1;
@@ -293,7 +293,6 @@
 
 	.swiperSlide {
 		width: auto;
-
 
 		@include desktop {
 			flex: 1;
@@ -313,20 +312,25 @@
 		color: inherit;
 		height: 100%;
 		border: 1px solid $color-light-gray;
+		padding: 10px;
+		transition: all 0.2s ease-in-out;
 
 		@include mobile {
 			min-width: 120px;
+		}
+
+		&:hover {
+			border-color: $color-primary;
 		}
 	}
 
 	.imageContainer {
 		position: relative;
-		width: 80px;
+		width: 100%;
 		height: 80px;
-		margin-bottom: 8px;
 
 		@include mobile {
-			width: 60px;
+			width: 100px;
 			height: 60px;
 		}
 	}
