--- a/src/widgets/social/ui/Social.module.scss
+++ b/src/widgets/social/ui/Social.module.scss
@@ -3,21 +3,14 @@
 
 .socialSection {
 	color: $color-light;
-	display: flex;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
 	column-gap: 6px;
 
 	@include mobile {
-		flex-direction: column;
+		grid-template-columns: repeat(1, 1fr);
 		align-items: center;
 		text-align: center;
-	}
-
-	> div {
-		flex: 1;
-
-		@include mobile {
-			flex: none;
-		}
 	}
 
 	.social {
