--- a/src/shared/ui/button/Button.module.scss
+++ b/src/shared/ui/button/Button.module.scss
@@ -1,4 +1,5 @@
-@import "../../../shared/styles/variables";
+@use '../../../shared/styles/variables' as *;
+@use '../../../shared/styles/mixins' as *;
 
 .btn {
     font-size: 14px;
@@ -15,6 +16,11 @@
     transition: all 0.3s ease;
 
     background: none;
+
+    @include mobile {
+        width: 100%;
+        padding: 15px;
+    }
 
     &[data-min-width] {
         min-width: attr(data-min-width px);
@@ -58,6 +64,10 @@
     align-items: center;
     width: 100%;
 
+    @include mobile {
+        padding-right: 25px;
+    }
+
     .arrowLeft,
     .arrowRight {
         position: absolute;
@@ -88,6 +98,10 @@
     .btnArrowWrap:hover & {
         padding-right: 0;
         padding-left: 30px;
+
+        @include mobile {
+            padding-left: 25px;
+        }
     }
 
     .btnArrowWrap:hover & .btnText {
@@ -106,17 +120,3 @@
     }
 }
 
-@media (max-width: $breakpoint-mobile) {
-    .btn {
-        width: 100%;
-        padding: 15px;
-    }
-
-    .btnArrowIcons {
-        padding-right: 25px;
-
-        .btnArrowWrap:hover & {
-            padding-left: 25px;
-        }
-    }
-}
