--- a/src/shared/ui/marquee/Marquee.module.scss
+++ b/src/shared/ui/marquee/Marquee.module.scss
@@ -1,25 +1,60 @@
-@import "../../../shared/styles/variables";
+@use '../../../shared/styles/variables' as *;
+@use '../../../shared/styles/mixins' as *;
 
 .marqueeContainer {
 	width: 100%;
 	overflow: hidden;
-	white-space: nowrap;
+	position: relative;
 	background-color: $color-bg;
-	color: $color-light;
-	padding: 10px 0;
+	padding: 14px 0;
 
-	.marqueeContent {
-		display: inline-block;
-		animation: marquee linear infinite;
-		padding-left: 100%;
+	@include mobile {
+		padding: 10px 0;
+	}
+
+	&.pauseOnHover:hover .marqueeContent {
+		animation-play-state: paused;
 	}
 }
 
-@keyframes marquee {
+.marqueeContent {
+	display: flex;
+	align-items: center;
+	width: max-content;
+	animation: marqueeScroll linear infinite;
+	gap: 40px;
+
+	@include mobile {
+		gap: 14px;
+	}
+}
+
+.marqueeItem {
+	white-space: nowrap;
+	flex-shrink: 0;
+	font-size: 24px;
+	color: $color-light;
+	text-transform: uppercase;
+
+	@include mobile {
+		font-size: 14px;
+	}
+
+	&::after {
+		content: '/';
+		padding-left: 40px;
+
+		@include mobile {
+			padding-left: 14px;
+		}
+	}
+}
+
+@keyframes marqueeScroll {
 	0% {
 		transform: translateX(0);
 	}
 	100% {
-		transform: translateX(-100%);
+		transform: translateX(-33.333%); // Сдвигаем на 1/3 так как контент продублирован 3 раза
 	}
 }
