--- a/src/widgets/hero/ui/Hero.module.scss
+++ b/src/widgets/hero/ui/Hero.module.scss
@@ -19,6 +19,10 @@
 		inset: 0;
 		padding-top: 160px;
 
+		@include laptop {
+			padding-top: 130px;
+		}
+
 		@include mobile {
 			padding-top: 90px;
 		}
@@ -54,6 +58,10 @@
 			line-height: 90%;
 			padding-bottom: 20px;
 			text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+
+			@include laptop {
+				font-size: 40px;
+			}
 
 			@include mobile {
 				font-size: 30px;
