--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,7 +5,7 @@ html {
     scroll-behavior: smooth;
     scroll-padding-top: 84px;
 
-    @include mobile{
+    @include mobile {
         scroll-padding-top: 70px;
     }
 }
@@ -13,7 +13,7 @@ html {
 html,
 body {
     max-width: 100vw;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 body {
@@ -24,9 +24,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-body.modal-open {
-    overflow: hidden;
+
+    &.modal-open,
+    &.lock {
+        overflow: hidden;
+    }
 }
 
 header {
@@ -49,8 +51,9 @@ a {
     color: inherit;
     text-decoration: none;
 }
-input:focus-visible, input:focus {
-  outline: none;
+input:focus-visible,
+input:focus {
+    outline: none;
 }
 
 .container {
@@ -70,26 +73,26 @@ input:focus-visible, input:focus {
 }
 
 .section-title {
-  font-size: 36px;
-  line-height: 100%;
-  font-weight: 400;
+    font-size: 36px;
+    line-height: 100%;
+    font-weight: 400;
 
-  @include mobile {
-    font-size: 24px;
-  }
+    @include mobile {
+        font-size: 24px;
+    }
 }
 
 .inst {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
     width: fit-content;
 
-  &::after {
-    content: '*';
-    position: absolute;
-    top: -4px;
-    left: 100%;
-  }
+    &::after {
+        content: "*";
+        position: absolute;
+        top: -4px;
+        left: 100%;
+    }
 }
 
 .mob-hide {
