добавлена фильтрация по бренду, фикс багов

--- a/src/widgets/footer/ui/Footer.module.scss
+++ b/src/widgets/footer/ui/Footer.module.scss
@@ -16,6 +16,11 @@
 			flex-direction: column;
 		}
 
+		.logoImage {
+			width: 245px;
+			height: auto;
+		}
+
 		.social {
 			display: flex;
 			gap: 10px;
