--- a/src/widgets/models/ui/Models.module.scss
+++ b/src/widgets/models/ui/Models.module.scss
@@ -38,6 +38,16 @@
 				max-height: fit-content;
 			}
 
+			animation: fadeInUp 0.5s ease forwards;
+			opacity: 0;
+
+			// Последовательное появление карточек
+			@for $i from 1 through 10 {
+				&:nth-child(#{$i}) {
+					animation-delay: #{$i * 0.1}s;
+				}
+			}
+
 			&:not(:last-child) {
 				margin-bottom: 20px;
 			}
@@ -279,7 +289,16 @@
 	}
 
 }
-
+@keyframes fadeInUp {
+	from {
+		opacity: 0;
+		transform: translateY(20px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
 
 // переключение цвета
 .colorSelector {
